[package]
name = "backend-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend_service"
path = "src/lib.rs"


[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
log = "0.4.20"
nanoid = "0.4.0"
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
secret-vault = {version = "1.12.0", features = ["gcp-secretmanager"]}
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
